fixed some of the layout / alignment issues, 'upcoming' canvas still too wide

--- a/proper/css/stylesheet.css
+++ b/proper/css/stylesheet.css
@@ -8,28 +8,25 @@ body {
 }*/
 
 #southCanvas {
-    display: inline-block;
-    vertical-align: top;
-    /*background: url(texture.jpg);*/
+  display: inline-block;
+  vertical-align: top;
+  /*background: url(texture.jpg);*/
 }
 
 #eastCanvas {
     display: inline-block;
-    vertical-align: top;
     /*background: url(texture.jpg);*/
     transform: rotate(90deg);
 }
 
 #northCanvas {
     display: inline-block;
-    vertical-align: top;
     /*background: url(texture.jpg);*/
     transform: rotate(180deg);
 }
 
 #westCanvas {
     display: inline-block;
-    vertical-align: top;
     /*background: url(texture.jpg);*/
     transform: rotate(270deg);
 }
